<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_add_1_message"
        android:orderInCategory="100"
        android:title="@string/add_1_message"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_20_messages"
        android:orderInCategory="100"
        android:title="@string/add_20_messages"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_restart"
        android:orderInCategory="100"
        android:title="@string/restart"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actions_instruction"
        android:orderInCategory="100"
        android:title="@string/instructions"
        app:showAsAction="never"/>
</menu>
